<resources>
    <string name="app_name">HKShopU</string>
    <string name="menu_title">HKShop</string>
    <string name="empty"></string>
    <string name="sign_up">SIGN-UP</string>
    <string name="register_email">EMAIL註冊</string>
    <string name="login">LOGIN</string>
    <string name="login_fb">FACEBOOK 登入</string>
    <string name="login_google">GOOGLE 登入</string>
    <string name="skip">略過</string>
    <string name="member_already">已經是會員了嗎？</string>
    <string name="please_login">Login</string>
    <string name="please_login_ch">登入帳戶</string>
    <string name="please_input_newPassword">輸入新密碼</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_notify">密碼格式必須包括大小階英文、數字及符號</string>
    <string name="hint_email">電子郵件地址</string>
    <string name="hint_password">密碼</string>
    <string name="hint_password_second">再次確認密碼</string>
    <string name="stay_login_ch">保持登入</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="forgetpassword_ch">忘記密碼?</string>
    <string name="email_authentication">電子郵件認證</string>
    <string name="please_input_verification_code">請輸入您的驗證碼</string>
    <string name="fail_to_recieve_verification_code">我沒收到驗證碼</string>
    <string name="resend_email">再寄一次</string>
    <string name="notification_title">店匯would like to send you notification</string>
    <string name="notification_content01">Join same device as Gauging Gadget</string>
    <string name="notification_content02">On my own device</string>
    <string name="notification_dontallow">DON\'T ALLOW</string>
    <string name="notification_allow">ALLOW</string>
    <string name="please_register">Sign-Up</string>
    <string name="please_forward">下一步</string>
    <string name="userareement">&lt;用戶協議條款&gt;</string>
    <string name="please_buildacnt">建立帳戶</string>
    <string name="build_byemail">或用電子郵件註冊</string>
    <string name="userinfo">用戶資料</string>
    <string name="emailverify">電子郵件驗證</string>
    <string name="emailaddress">郵寄地址</string>
    <string name="facebook_app_id">742143353334628</string>
    <string name="fb_login_protocol_scheme">742143353334628</string>
    <string name="basic_info">Basic Information</string>
    <string name="user_name">User Name</string>
    <string name="passwordconf">Confirm Password</string>
    <string name="optional">Optional</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="rainbow">其他</string>
    <string name="birth">Day of Birth</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="subaddress">其他地址</string>
    <string name="floor">樓層</string>
    <string name="room">室</string>
    <string name="please_confirm_password">Please_Confirm_Your Password</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="product">Product</string>
    <string name="info">Info</string>
    <string name="alert_confirm">CONFIRM</string>
    <string name="alert_cancel">CANCEL</string>
    <string name="alert_send">SEND</string>
    <string name="shop_category">Shop Category</string>
    <string name="payment_method">Payment Method</string>
    <string name="shipfee_setting">Shipping Fee Setting</string>
    <string name="add_product">Add Product</string>
    <string name="my_product">我的商品</string>
    <string name="my_like">關注</string>
    <string name="my_income">進帳/月</string>
    <string name="fee_unit">HKD</string>
    <string name="fee_more">全單滿</string>
    <string name="fee_no">$HKD免運費</string>
    <string name="fee_fix_head">全單</string>
    <string name="fee_to">$HKD至</string>
    <string name="fee_fix">$HKD運費為</string>
    <string name="fee_follow">運費只根據商品設定</string>
    <string name="shippingfee">Shipping Fee Setting</string>
    <string name="title_terms_of_services">服務條款</string>
    <string name="awareness_and_acceptance_of_terms_s1">1. 認知與接受條款</string>
    <string name="awareness_and_acceptance_of_terms_contents_s1">
        歡迎使用由香港商店匯聚網絡有限公司（以下簡稱「HKshopu」）負責營運之 <font color="#1DBCCF"><b>HKshopu</b></font> 電商平台服務（以下稱為「本服務」)。本服務條款旨在規範您使用本服務時，我們與您之間的關係，當您進入 HKshopu App及使用本服務時，即表示您已閱讀、瞭解並同意接受本服務條款之所有內容。\n
        本服務包括本網站及透過本網站或其相關服務所提供的所有資訊、連結網頁、功能、資料、文字、影像、相片、圖形、音樂、聲音、影片、訊息、標籤、內容、程式設計、軟體、應用程式服務 (包括但不限於任何行動應用服務) 。有關客戶服務及地區性之支援服務，將依照您所屬國家或所在地，由 HKshopu 指定當地之法人及其所屬人員提供相關服務及聯繫窗口。\n
        當您使用 HKshopu 特定服務或新增功能時，可能會依據該特定服務之性質，而須遵守 HKshopu 所另行公告之服務條款或相關規定。此另行公告之服務條款或相關規定，亦均併入屬於本服務條款之一部分，本服務條款規範您對於 HKshopu 所提供之服務的使用行為。\n
        HKshopu 有權於任何時間修改或變更本服務條款之內容，建議您隨時注意該等修改或變更。您於任何修改或變更後繼續使用本服務，視為您已閱讀、瞭解並同意接受該等修改或變更。如果您不同意本服務條款的內容，或者您所屬的國家或地域排除本服務條款內容之全部或部份時，您應立即停止使用本服務。\n
        若您為未滿二十歲，除應符合上述規定外，並應於您的家長（或監護人）閱讀、瞭解並同意本服務條款之所有內容及其後修改變更後，方得使用或繼續使用本服務。當您使用或繼續使用本服務時，即推定您的家長（或監護人）已閱讀、瞭解並同意接受本服務條款之所有內容及其後修改變更。
    </string>
    <string name="links_to_third_party_websites_s2">2. 與第三人網站的連結</string>
    <string name="links_to_third_party_websites_contents_s2">
        本服務或協力廠商可能會提供連結至其他網站或網路資源的連結。您可能會因此連結至其他業者經營的網站，但不表示 HKshopu 與該等業者有任何關係。其他業者經營的網站均由各該業者自行負責，不屬 HKshopu 控制及負責範圍之內。HKshopu 對任何檢索結果或外部連結，不擔保其合適性、可依賴性、即時性、有效性、正確性及完整性。
    </string>
    <string name="your_registration_obligations_s3">3. 您的註冊義務</string>
    <string name="your_registration_obligations_contents_s3">
        為了能使用本服務，您同意以下事項： (a) 依本服務註冊表之提示提供您本人正確、最新及完整的資料， (b) 維持並更新您個人資料，確保其為正確、最新及完整。若您提供任何錯誤、不實或不完整的資料，HKshopu 有權暫停或終止您的帳號，並拒絕您使用本服務之全部或部份。
    </string>
    <string name="member_account_password_and_security_s4">4. 會員帳號、密碼及安全</string>
    <string name="member_account_password_and_security_contents_s4">
        完成本服務的登記程序之後，您有責任維持密碼及帳號的機密安全。您並同意以下事項：(a)您的密碼或帳號遭到盜用或有其他任何安全問題發生時，您將立即通知 HKshopu，且(b)每次連線完畢，均結束您的帳號使用。
    </string>
    <string name="what_you_provide_s5">5. 您提供的內容</string>
    <string name="what_you_provide_contents_s5">
        您在本服務或透過本服務上傳、張貼、寄送、收受、儲存或以其他方式提供的內容，包括但不限於文字、圖像、影音及評價等（以下簡稱「內容」），即表示您聲明並保證您擁有所有必要的權利及/或許可，且可依照本條款供 HKshopu 利用。\n
        您同意授予 HKshopu 非專屬、全球性、免權利金、不可撤銷、永久的、可再授權及可轉讓的權利，在本服務或經由本服務或與本服務相關之管道，使用、複製、修改、創作衍生作品、翻譯、散布、授權、儲存、傳輸、改編或其他任何開發方式利用該內容。HKshopu 得任意利用內容，包括但不限於透過信件、顯示在第三方網站、廣告媒體或其他管道。\n
        您也了解並同意對於您所提供的內容及 HKshopu 因使用內容而產生之一切請求、損失，均由您負完全的責任。您擔保此些內容不侵害、不當利用或違反他人的專利權、著作權、商標權、營業秘密、人格權、其他財產權、智慧財產權、肖像權、私隱權或任何適用法律或法規。\n
        為了協助其他語言的會員了解本服務，我們提供部分或全部的翻譯服務。本服務包含由 Google 翻譯提供的服務，Google 不提供任何明示或默示的擔保，包含但不限於正確性、可信性、商業適售性、特定目的之適用性及未侵害他人權利。HKshopu 亦不保證翻譯結果的正確性及品質，會員對於檢視、確認翻譯結果的正確性，應自行負責。
    </string>
    <string name="protection_of_children_and_youth_s6">6. 兒童及青少年之保護</string>
    <string name="protection_of_children_and_youth_contents_s6">
        兒童及青少年上網已經成為無可避免之趨勢，使用網際網路獲取知識更可以培養子女的成熟度與競爭能力。然而網路上的確存有不適宜兒童及青少年接受的訊息，例如色情與暴力的訊息，兒童及青少年有可能因此受到心靈與肉體上的傷害。因此，為確保兒童及青少年使用網路的安全，並避免私隱權受到侵犯，家長（或監護人）應盡到下列義務：\n
        a.先檢閱各該網站是否有保護個人資料的「私隱權政策」，再決定是否同意提出相關的個人資料；並應持續叮嚀兒童及青少年不可洩漏自己或家人的任何資料（包括姓名、地址、電話、電子郵件信箱、照片、信用卡號等）給任何人。也不可以單獨接受網友的邀請或贈送禮物而與之見面。 b.謹慎選擇合適網站供兒童及青少年瀏覽。未滿十二歲之兒童上網時，應全程在旁陪伴，十二歲以上未滿十八歲之青少年上網前亦應斟酌是否給予同意。
    </string>
    <string name="the_users_legal_obligations_and_commitments_s7">7. 使用者的守法義務及承諾</string>
    <string name="the_users_legal_obligations_and_commitments_contents_s7">
        您承諾絕不為任何非法目的或以任何非法方式使用本服務，並承諾遵守中華民國相關法規及一切使用網際網路之國際慣例。您若係中華民國以外之使用者，並同意遵守所屬國家或地域之法令。您同意並保證不得利用本服務從事侵害他人權益或違法之行為，包括但不限於：\n
        A. 上載、張貼、公布或傳送任何誹謗、侮辱、具威脅性、攻擊性、不雅、猥褻、不實、違反公共秩序或善良風俗或其他不法之文字、圖片或任何形式的檔案於本服務上； B. 侵害他人名譽、私隱權、營業秘密、商標權、著作權、專利權、其他智慧財產權及其他權利； C. 違反依法律或契約所應負之保密義務； D. 冒用他人名義使用本服務； E. 上載、張貼、傳輸或散佈任何含有電腦病毒或任何對電腦軟、硬體產生中斷、破壞或限制功能之程式碼之資料； F. 從事不法交易行為或張貼虛假不實、引人犯罪之訊息； G. 濫發廣告郵件、垃圾郵件、連鎖信、違法之多層次傳銷訊息等； J. 以任何方法傷害未成年人； K. 偽造訊息來源或以任何方式干擾傳輸來源之認定； L. 干擾或中斷本服務或伺服器或連結本服務之網路，或不遵守連結至本服務之相關需求、程序、政策或規則等，包括但不限於：使用任何設備、軟體或刻意規避 HKshopu 之排除自動搜尋之標頭 (robot exclusion headers)； M. 追蹤他人或其他干擾他人或為前述目前蒐集或儲存他人之個人資訊； O. 其他 HKshopu 有正當理由認為不適當之行為。
    </string>
    <string name="System_interruption_or_failure_s8">8. 系統中斷或故障</string>
    <string name="System_interruption_or_failure_contents_s8">
        本服務有時可能會出現中斷或故障等現象，或許將造成您使用上的不便、資料喪失、錯誤、遭人篡改或其他經濟上損失等情形。您於使用本服務時宜自行採取防護措施。HKshopu 對於您因使用（或無法使用）本服務而造成的損害，除故意或重大過失外，不負任何賠償責任。
    </string>
    <string name="information_or_suggestion_s9">9. 資訊或建議</string>
    <string name="information_or_suggestion_contents_s9">
        HKshopu 對於您使用本服務或經由本服務連結之其他網站而取得之資訊或建議（包括但不限於，商務、投資理財、醫療、法律等方面），不擔保其為完全正確無誤。HKshopu 對於本服務所提供之資訊或建議有權隨時修改或刪除。您在做出任何相關規劃與決定之前，仍應請教專業人員針對您的情況提出意見，以符合您的個別需求。\n
        HKshopu 隨時會與其他公司、廠商等第三人（「內容提供者」）合作，由其提供包括新聞、訊息、電子報等不同內容供 HKshopu 刊登，HKshopu 於刊登時均將註明內容提供者。基於尊重內容提供者之智慧財產權，HKshopu 對其所提供之內容並不做實質之審查或修改，對該等內容之正確真偽亦不負任何責任。對該等內容之正確真偽，您宜自行判斷之。您若認為某些內容涉及侵權或有所不實，請逕向該內容提供者反應意見。
    </string>
    <string name="advertising_s10">10. 廣告</string>
    <string name="advertising_contents_s10">
        您在本服務中瀏覽到的所有廣告內容、文字與圖片之說明、展示樣品或其他銷售資訊，均由各該廣告商、產品與服務的供應商所設計與提出。您對於廣告之正確性與可信度應自行斟酌與判斷。HKshopu 僅接受委託予以刊登，不對前述廣告負擔保責任。
    </string>
    <string name="buying_and_selling_or_other_transactions_s11">11. 買賣或其他交易行為</string>
    <string name="buying_and_selling_or_other_transactions_contents_s11">
        廠商或個人透過本服務進行商品買賣、服務或其他交易行為，各該買賣或其他合約均僅存在您與各該廠商或個人兩造之間。您應要求各該廠商或個人，就其商品、服務或其他交易標的物之品質、內容、運送、保證事項與瑕疵擔保責任等，事先詳細闡釋與說明。您因前述買賣、服務或其他交易行為所產生之爭執，應向各該廠商或個人尋求救濟或解決之道。
    </string>
    <string name="protection_of_intellectual_property_s12">12. 知識產權的保護</string>
    <string name="protection_of_intellectual_property_contents_s12">
        HKshopu 所使用之軟體或程式、網站上所有內容，包括但不限於商品資訊、圖片、檔案、網站架構、網站畫面的安排、網頁設計、會員內容等，均由 HKshopu 或其他權利人依法擁有其智慧財產權，包括但不限於商標權、專利權、著作權、營業秘密與專有技術等。任何人不得逕自使用、修改、重製、公開播送、公開傳輸、公開演出、改作、散布、發行、公開發表、進行還原工程、解編或反向組譯。若您欲引用或轉載前述軟體、程式或網站內容，除明確為法律所許可者外，必須依法取得 HKshopu 或其他權利人的事前書面同意。尊重智慧財產權是您應盡的義務，如有違反，您應對 HKshopu 負損害賠償責任。HKshopu 及其關係企業為行銷宣傳本服務，就本服務相關之商品或服務名稱、圖樣等（以下稱「HKshopu 商標」），依其註冊或使用之狀態，受商標法及公平交易法等之保護，未經 HKshopu 事前書面同意，您同意不以任何方式使用 HKshopu 商標。
    </string>
    <string name="payment_s13">13. 付款</string>
    <string name="payment_contents_s13">
        為確保您在本服務遇到付款爭議處理、退款、訂單取消時，HKshopu 能提供充分的營運支援，涉及下列交易情況時，將以下列營運個體成為本使用條款的締約方，處理所生的爭議或糾紛：以 HKD 付款的交易：香港商店匯聚網絡有限公司，例外以香港法律為準據法。
    </string>
    <string name="notification_s14">14. 通知</string>
    <string name="notification_contents_s14">
        如依法或其他相關規定須為通知時，HKshopu 得以包括但不限於：電子郵件、一般信件、簡訊、多媒體簡訊、文字訊息、張貼於本服務網頁，或其他現在或未來合理之方式通知您，包括本服務條款之變更。但若您違反本服務條款，以未經授權的方式存取本服務，您將不會收到前述通知。當您經由授權的方式存取本服務，而同意本服務條款時，您即同意 HKshopu 所為之任何及所有給您的通知，都視為送達。
    </string>
    <string name="termination_s15">15. 終止</string>
    <string name="termination_contents_s15">
        您同意 HKshopu 得依其判斷因任何理由，包含但不限於一定期間未使用、法院或政府機關命令、本服務無法繼續或服務內容實質變更、無法預期之技術或安全因素或問題、您所為詐欺或違法行為、未依約支付費用，或其他 HKshopu 認為您已經違反本服務條款的明文規定及精神，而終止或限制您使用帳號（或其任何部分）或本服務之使用，並將本服務內任何「會員內容」加以移除並刪除。您並同意 HKshopu 亦得依其自行之考量，於通知或未通知之情形下，隨時終止或限制您使用本服務或其任何部分。您承認並同意前開終止或限制，HKshopu 得立即關閉、刪除或限制存取您的帳號及您帳號中全部或部分相關資料及檔案，及停止本服務全部或部分之使用。此外，您同意若本服務之使用被終止或限制時，HKshopu 對您或任何第三人均不承擔責任。
    </string>
    <string name="governing_law_and_competent_court_s16">16. 準據法及管轄法院</string>
    <string name="governing_law_and_competent_court_contents_s16">
        本服務條款構成您與 HKshopu 就您使用本服務之完整合意，取代您先前與 HKshopu 間有關本服務所為之任何約定。本服務條款之解釋與適用，以及與本服務條款有關的爭議，除法律或本服務條款另有規定者外，均應依照香港法律予以處理。
    </string>
    <string name="governing_law_and_competent_court_s17">17. 其他事項</string>
    <string name="governing_law_and_competent_court_contents_s17">
        HKshopu 未行使或執行本服務條款任何權利或規定，不構成前開權利或規定之棄權。\n
        若任何本服務條款規定，經有管轄權之法院認定無效，當事人仍同意法院應努力使當事人於前開規定所表達之真意生效，且本服務條款之其他規定仍應完全有效。\n
        本服務條款之標題僅係為方便起見，不具任何法律或契約效果。\n
        如欲回報任何違反本服務條款，或對本服務條款有疑問，請透過電子郵件（<font color="#1DBCCF"><b>customer-service@hkshopu.com</b></font>）聯絡我們。\n
        最近一次更新條款：2021 年 xx 月 xx 日
    </string>
</resources>