<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.fragmentdialog.NotificationDialogFragmen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/notification_background_radius">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginTop="30dp"
            android:text="@string/notification_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/notification_content01"/>
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/notification_content02"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/dont_allow"
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:background="@mipmap/rectangle"
                android:text="@string/notification_dontallow"/>
            <Button
                android:id="@+id/allow"
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:textSize="15sp"
                android:background="@mipmap/rectangle"
                android:text="@string/notification_allow"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>